CR comments